修改自定义集成名称为general_link

--- a/custom_components/general_link/manifest.json
+++ b/custom_components/general_link/manifest.json
@@ -1,9 +1,9 @@
 {
-  "domain": "general-link",
+  "domain": "general_link",
   "name": "GeneralLink",
   "config_flow": true,
-  "documentation": "https://github.com/leonardlcl/general-link",
-  "issue_tracker": "https://github.com/leonardlcl/general-link/issues",
+  "documentation": "https://github.com/leonardlcl/general_link",
+  "issue_tracker": "https://github.com/leonardlcl/general_link/issues",
   "dependencies": ["mqtt"],
   "requirements": ["paho-mqtt==1.6.1"],
   "zeroconf": ["_mqtt._tcp.local."],
