--- a/custom_components/general_link/manifest.json
+++ b/custom_components/general_link/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "general_link",
   "name": "GeneralLink",
-  "config_flow": true,
-  "documentation": "https://github.com/leonardlcl/general_link",
-  "issue_tracker": "https://github.com/leonardlcl/general_link/issues",
-  "dependencies": ["mqtt"],
-  "requirements": ["paho-mqtt==1.6.1"],
-  "zeroconf": ["_mqtt._tcp.local."],
   "codeowners": ["@leonardlcl"],
+  "config_flow": true,
+  "dependencies": ["mqtt"],
+  "documentation": "https://github.com/leonardlcl/general_link",
   "iot_class": "local_push",
-  "version": "1.4.7"
+  "issue_tracker": "https://github.com/leonardlcl/general_link/issues",
+  "requirements": ["paho-mqtt==1.6.1"],
+  "version": "1.4.7",
+  "zeroconf": ["_mqtt._tcp.local."],
 }
