--- a/custom_components/general_link/manifest.json
+++ b/custom_components/general_link/manifest.json
@@ -9,5 +9,5 @@
   "issue_tracker": "https://github.com/leonardlcl/general_link/issues",
   "requirements": ["paho-mqtt==1.6.1"],
   "version": "1.4.7",
-  "zeroconf": ["_mqtt._tcp.local."],
+  "zeroconf": ["_mqtt._tcp.local."]
 }
