--- a/custom_components/general_link/manifest.json
+++ b/custom_components/general_link/manifest.json
@@ -7,7 +7,7 @@
   "documentation": "https://github.com/leonardlcl/general_link",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/leonardlcl/general_link/issues",
-  "requirements": ["paho-mqtt==1.6.1"],
-  "version": "v1.5.22",
+  "requirements": ["paho-mqtt>=1.6.1"],
+  "version": "v1.5.23",
   "zeroconf": ["_mqtt._tcp.local."]
 }
